Добавлен объект конфигурации в Startup

--- a/WebStore_Study/appsettings.json
+++ b/WebStore_Study/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "greetings": "My First ASP.Net Core application"
 }
+
