--- a/WebStore_Study/WebStore_Study.csproj
+++ b/WebStore_Study/WebStore_Study.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebStore_Study.Domain\WebStore_Study.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
