--- a/WebStore_Study/appsettings.json
+++ b/WebStore_Study/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore_StudyDb;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
