--- a/WebStore_Study/WebStore_Study.csproj
+++ b/WebStore_Study/WebStore_Study.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\WebStore_Study.Domain\WebStore_Study.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
