--- a/WebStore_Study/appsettings.json
+++ b/WebStore_Study/appsettings.json
@@ -9,7 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "greetings": "My First ASP.Net Core application"
+  "AllowedHosts": "*"
+
 }
 
