--- a/Ui/WebStore_Study/WebStore_Study.csproj
+++ b/Ui/WebStore_Study/WebStore_Study.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\WebStore_Study.Domain\WebStore_Study.Domain.csproj" />
     <ProjectReference Include="..\..\Services\WebStore_Study.DAL\WebStore_Study.DAL.csproj" />
+    <ProjectReference Include="..\..\Services\WebStore_Study.Interfaces\WebStore_Study.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
