--- a/Ui/WebStore_Study/WebStore_Study.csproj
+++ b/Ui/WebStore_Study/WebStore_Study.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\..\Common\WebStore_Study.Domain\WebStore_Study.Domain.csproj" />
     <ProjectReference Include="..\..\Services\WebStore_Study.DAL\WebStore_Study.DAL.csproj" />
     <ProjectReference Include="..\..\Services\WebStore_Study.Interfaces\WebStore_Study.Interfaces.csproj" />
+    <ProjectReference Include="..\..\Services\WebStore_Study.Services\WebStore_Study.Services.csproj" />
   </ItemGroup>
 
 </Project>
