--- a/Services/WebStore_Study.Services/WebStore_Study.Services.csproj
+++ b/Services/WebStore_Study.Services/WebStore_Study.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\WebStore_Study.Domain\WebStore_Study.Domain.csproj" />
+    <ProjectReference Include="..\WebStore_Study.Clients\WebStore_Study.Clients.csproj" />
     <ProjectReference Include="..\WebStore_Study.DAL\WebStore_Study.DAL.csproj" />
     <ProjectReference Include="..\WebStore_Study.Interfaces\WebStore_Study.Interfaces.csproj" />
   </ItemGroup>
