--- a/Ui/WebStore_Study/appsettings.json
+++ b/Ui/WebStore_Study/appsettings.json
@@ -9,7 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-
+  "AllowedHosts": "*",
+  "WebApiUrl": "http://localhost:5001"
 }
 
