--- a/Ui/WebStore_Study/log4Net.config
+++ b/Ui/WebStore_Study/log4Net.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-  <appender name="Console" type="log4net.Appender.ColoredConsoleAppender">
-    <mapping>
+  <appender name="Console" type="log4net.Appender.ConsoleAppender">
+    <!--<mapping>
       <level value="ERROR" />
       <foreColor value="White" />
       <backColor value="Red, HighIntensity" />
@@ -9,10 +9,10 @@
     <mapping>
       <level value="DEBUG" />
       <backColor value="Green" />
-    </mapping>
+    </mapping>-->
     <layout type="log4net.Layout.PatternLayout">
       <!-- Pattern to output the caller's file name and line number -->
-      <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      <conversionPattern value="%newline ---------- %date ---------- [%thread] ---------- %newline  %logger : [%property{NDC}]%newline%-5level: %message%newline" />
     </layout>
   </appender>
     
