--- a/Ui/WebStore_Study/appsettings.json
+++ b/Ui/WebStore_Study/appsettings.json
@@ -67,5 +67,7 @@
     }
   },
   "AllowedHosts": "*",
-  "WebApiUrl": "http://localhost:5001"
+  "WebApiUrl": "http://localhost:5001",
+
+  "CatalogPageSize": 6 
 }
